--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "bluebird": "^3.5.4",
     "clean-webpack-plugin": "2.0.1",
+    "connect-history-api-fallback": "^1.6.0",
     "css-loader": "2.1.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eventsource-polyfill": "^0.9.6",
     "express": "4.16.4",
+    "fe-code-lint": "0.0.21",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "0.19.1",
@@ -48,6 +53,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.4",
+    "@babel/runtime-corejs3": "7.4.4",
+    "core-js": "3.0.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-hot-loader": "^4.8.4",
