--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   "devDependencies": {
     "@babel/cli": "7.4.4",
     "@babel/core": "7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "bluebird": "^3.5.4",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.5",
+    "bluebird": "3.5.4",
     "clean-webpack-plugin": "2.0.1",
-    "connect-history-api-fallback": "^1.6.0",
+    "connect-history-api-fallback": "1.6.0",
     "css-loader": "2.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eventsource-polyfill": "^0.9.6",
+    "eslint-plugin-react": "7.13.0",
+    "eventsource-polyfill": "0.9.6",
     "express": "4.16.4",
     "fe-code-lint": "0.0.21",
     "file-loader": "3.0.1",
@@ -57,7 +57,7 @@
     "core-js": "3.0.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-hot-loader": "^4.8.4",
+    "react-hot-loader": "4.8.4",
     "react-loadable": "5.5.0",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0"
