--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-react": "^7.13.0",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.4",
-    "fe-code-lint": "0.0.21",
+    "fe-code-lint": "^0.0.3",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "0.19.1",
@@ -47,6 +47,7 @@
     "npm-run-all": "4.1.5",
     "open": "^6.3.0",
     "portfinder": "^1.0.20",
+    "redux-devtools": "^3.5.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "uglifyjs-webpack-plugin": "2.1.2",
@@ -66,8 +67,10 @@
     "react-dom": "16.8.6",
     "react-hot-loader": "4.8.4",
     "react-loadable": "5.5.0",
+    "react-redux": "^7.0.3",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
+    "redux": "^4.0.1",
     "webpack-log": "^2.0.0"
   }
 }
