--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "webpack-log": "^2.0.0"
   }
 }
