--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "bluebird": "3.5.4",
@@ -51,6 +53,7 @@
     "portfinder": "^1.0.20",
     "redux-devtools": "^3.5.0",
     "sass-loader": "7.1.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "0.23.1",
     "uglifyjs-webpack-plugin": "2.1.2",
     "webpack": "4.30.0",
@@ -63,6 +66,10 @@
   "dependencies": {
     "@babel/polyfill": "7.4.4",
     "@babel/runtime-corejs3": "7.4.4",
+    "@types/prop-types": "^15.7.3",
+    "@types/react-loadable": "^5.5.3",
+    "@types/react-router-dom": "^5.1.4",
+    "copy-webpack-plugin": "^5.1.1",
     "core-js": "3.0.1",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
@@ -74,6 +81,10 @@
     "react-router-dom": "5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "ts-loader": "^7.0.1",
+    "tslint": "^6.1.1",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.8.3",
     "webpack-log": "^2.0.0"
   }
 }
